--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-transpile-modules": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.33.5",
     "zustand": "^3.6.9"
   },
   "devDependencies": {
